--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
         <header>
             <h1>Discover hidden places in the world around you</h1>
         </header>
-        <a href="#">Download Excursion (Coming Soon!)</a>
+       <p>
+           <a href="#">Download Excursion (Coming Soon!)</a>
+        </p>
+       <p>
+           <video loop autoplay muted>
+           <source src="resources/excursion.mp4">
+            Your browser does not support the video tag.
+            </video>
+        </p>
+        <h2>Your personal travel guide</h2>
+        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+        <p>
+            <img src="./resources/camp.jpg" alt="image of open camps">
+        </p>
+        <p>
+            <img src="./resources/phone.png" alt="image of phone">
+        </p>
+        <h2>Coming Soon for iPhone and Andriod</h2>
+        <p>
+            <a href="#">Download Excursion (Coming Soon!)</a>
+        </p>
+        <footer>
+            <p>&copy; Excursion</p>
+        </footer>
     </body>
 </html>
